Update SAACGAS to SAACGAIS

--- a/app/client/public/manifest.json
+++ b/app/client/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "SAACGAS",
+  "short_name": "SAACGAIS",
   "name": "Securing Agent-to-Agent Communication in Generative AI Systems",
   "start_url": ".",
   "display": "standalone",
