--- a/app/client/package.json
+++ b/app/client/package.json
@@ -45,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "typescript": "4.9.5",
     "@babel/core": "^7.28.5",
     "@babel/eslint-parser": "^7.28.5",
     "@babel/preset-react": "^7.28.5",
